Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Sunblue-version-1 : Theme SunBlue version 1 for MyBB">
+    <meta name="description" content="Sunblue-Version-1 : Theme SunBlue Version 1 for MyBB">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Sunblue-version-1</title>
+    <title>Sunblue-Version-1</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/SunDi3yansyah/SunBlue-version-1">View on GitHub</a>
 
-          <h1 id="project_title">Sunblue-version-1</h1>
-          <h2 id="project_tagline">Theme SunBlue version 1 for MyBB</h2>
+          <h1 id="project_title">Sunblue-Version-1</h1>
+          <h2 id="project_tagline">Theme SunBlue Version 1 for MyBB</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/SunDi3yansyah/SunBlue-version-1/zipball/master">Download this project as a .zip file</a>
@@ -95,10 +95,10 @@ Sebelumnya terimakasih jika anda sudah menggunakan tema ini... Jelek atau Bagus 
 <ul>
 <li><a href="https://github.com/ambrizals">ambrizals</a></li>
 <li><a href="https://github.com/alfa6661">Alfa Adhitya</a></li>
-<li>Bekti</li>
-<li>Dhie</li>
 <li><a href="https://github.com/Terzier">Terzier</a></li>
-<li>Ilham</li>
+<li><a href="https://github.com/fachrils">fachrils</a></li>
+<li>Bekti Puja Pratama</li>
+<li>Dhie Cihuy</li>
 </ul>
       </section>
     </div>
@@ -106,7 +106,7 @@ Sebelumnya terimakasih jika anda sudah menggunakan tema ini... Jelek atau Bagus 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Sunblue-version-1 maintained by <a href="https://github.com/SunDi3yansyah">SunDi3yansyah</a></p>
+        <p class="copyright">Sunblue-Version-1 maintained by <a href="https://github.com/SunDi3yansyah">SunDi3yansyah</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
